// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slider renders disabled Slider correctly 1`] = `
<div>
  <div
    class="iui-Slider"
    style="--iui-Slider--direction: 90deg; --iui-Slider--progress: 50%;"
  >
    <input
      class="iui-Slider__input"
      disabled=""
      id="slider-_r_a_"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class="iui-Slider__rail"
    />
    <div
      class="iui-Slider__thumb"
    />
  </div>
</div>
`;

exports[`Slider renders horizontal Slider correctly 1`] = `
<div>
  <div
    class="iui-Slider"
    style="--iui-Slider--direction: 90deg; --iui-Slider--progress: 50%;"
  >
    <input
      class="iui-Slider__input"
      id="slider-_r_8_"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class="iui-Slider__rail"
    />
    <div
      class="iui-Slider__thumb"
    />
  </div>
</div>
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div>
  <div
    class="iui-Slider"
    style="--iui-Slider--direction: 0deg; --iui-Slider--progress: 50%;"
  >
    <input
      class="iui-Slider__input"
      id="slider-_r_9_"
      max="10"
      min="0"
      orient="vertical"
      type="range"
      value="5"
    />
    <div
      class="iui-Slider__rail"
    />
    <div
      class="iui-Slider__thumb"
    />
  </div>
</div>
`;
